--- a/res/layout/activity_t3_listview_main.xml
+++ b/res/layout/activity_t3_listview_main.xml
@@ -7,4 +7,10 @@
     android:layout_height="match_parent"
     tools:context="tuan3.T3ListviewMainActivity">
 
+    <ListView
+        android:id="@+id/t3Listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
